src/style.css
* {
  margin: 0;
  padding: 0;
}

html,
body {
  overflow: hidden;
  height: 100%;
  /* font-family: "Cabin Sketch", sans-serif; */
  font-family: "Nunito", sans-serif;
}

.revo-realms {
  position: fixed;
  top: 0;
  left: 0;
  outline: none;
}

#ui {
  position: fixed;
  top: 1rem;
  right: 1rem;
  display: flex;
  gap: 1rem;
  z-index: 1;
}

.debug-panel {
  width: 340px !important;
  z-index: 1;
  left: 0.5rem;
}

body:has(.monitoring-panel) .debug-panel {
  left: 110px;
}

hr {
  border: 0.1px solid;
  border-color: #d4d3d34e;
  margin: 1rem 0;
}

/**
Credits to Temani Afif
https://codepen.io/t_afif/pen/VwxbdpV
**/
.interface-btn {
  --border-thickness: 1px;
  --corner-size: 0.15em;
  --color: #fff;
  --border-color: #bb012d;

  filter: drop-shadow(0 10rem 10rem black);

  top: 1rem;
  right: 1rem;
  font-family: system-ui, sans-serif;
  font-weight: bold;
  font-size: 1.25rem;
  cursor: pointer;
  border: none;
  display: grid;
  place-items: center;
  padding: calc(0.5em + var(--corner-size));
  color: var(--color);
  --inner-border-size: var(--corner-size);
  background: conic-gradient(
      from 90deg at var(--border-thickness) var(--border-thickness),
      #0000 90deg,
      var(--color) 0
    )
    var(--inner-border-size) var(--inner-border-size) /
    calc(100% - var(--border-thickness) - 2 * var(--inner-border-size))
    calc(100% - var(--border-thickness) - 2 * var(--inner-border-size));
  transition: 0.15s ease-in-out;
  outline: var(--border-thickness) solid #0000;
  outline-offset: 0.3em;
  background-color: black;
}

.interface-btn:hover,
.interface-btn:focus-visible {
  --inner-border-size: 0px;
  outline-color: var(--color);
  outline-offset: 0.1em;
}

.interface-btn:not(:disabled) {
  opacity: 0.6;
}

.interface-btn:disabled {
  pointer-events: none;
  opacity: 0.3;
}

.interface-btn > svg {
  width: 20px;
}

/**
Dialog
**/
dialog {
  margin: auto;
  border-radius: 7px;
  border: none;
  color: #d4d3d3;
  width: 100%;
  max-width: 70%;
  background-color: rgba(0, 0, 0, 0.75);
  backdrop-filter: blur(25px);
}

dialog .credits-content {
  --padding: 3rem;
  display: flex;
  flex-direction: column;
  width: calc(100% - var(--padding) * 2);
  padding: var(--padding);
  gap: 1rem;
}

dialog .credits-content h1 {
  margin-bottom: 1rem;
}

dialog .asset h2 span {
  font-weight: 400;
  font-size: 1rem;
  margin-left: 0.25rem;
}

dialog .credits-content p {
  color: #ababab;
}

dialog .credits-content .gratitude {
  margin-bottom: 1rem;
  line-height: 1.35rem;
}

dialog .credits-content .asset {
  border-radius: 7px;
  padding: 1rem;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  background-color: #ffffff11;
}

dialog a {
  color: #bb7a01;
}

dialog a:visited {
  color: #bb4b01;
}

@media screen and (max-width: 650px) {
  dialog {
    max-width: 85%;
  }

  dialog .credits-content {
    --padding: 1rem;
  }

  dialog .credits-content h1 {
    font-size: 1.5rem;
  }

  dialog .credits-content h2 {
    font-size: 1.1rem;
  }
}

/**
Joystick zone
**/
.joystick-zone {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 25%;
}

body:not(.is-touch-device) .joystick-zone {
  visibility: hidden;
  pointer-events: none;
}

/**
Compass
**/
.compass-container {
  --opacity: 0;
  --size: 6rem;
  --padding: 1rem;
  position: fixed;
  bottom: var(--padding);
  right: var(--padding);
  opacity: var(--opacity);
  width: var(--size);
  height: var(--size);
  filter: drop-shadow(0 0 10px black);
  transition: opacity 0.5s ease-in-out;
  pointer-events: none;
}
.compass {
  position: absolute;
  width: 100%;
}

.compass-arrow {
  --yaw: 0;
  position: absolute;
  width: 100%;
  transform: rotateZ(var(--yaw));
  will-change: transform;
  transition: transform 0.15s linear;
}

